--- a/assets/css/adminDashboard.css
+++ b/assets/css/adminDashboard.css
@@ -16,8 +16,8 @@ header {
     justify-content: space-between; /* Space between the logo and profile */
     align-items: center; /* Center items vertically */
     background-color: white;
-    padding: 0.2vw;
-    padding-right: 3vw;
+    padding: 0.1vw;
+    /* padding-right: 3vw; */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
