--- a/assets/css/userRequest.css
+++ b/assets/css/userRequest.css
@@ -4,7 +4,12 @@
     box-sizing: border-box;
     font-family: Readex_Pro;
 }
-
+html, body {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    width: 100vw; /* Constrain width to viewport */
+}
 @font-face {
     font-family: Readex_Pro;
     src: url('../fonts/font-families/Readex_Pro/ReadexPro-Regular.ttf');
@@ -46,10 +51,12 @@ header img {
 /* Header separator */
 .header-seperator {
     background-color: #003DA5;
-    padding-bottom: 1.5vw; 
+    padding-bottom: 2vw;
     width: 100%;
-    margin-top: -0.5vh; 
-    margin-bottom: 0.2vh; 
+    margin-top: -1vh;
+    /* margin-bottom: 0.5vh; */
+    position: relative;
+    z-index: 2000;
 }
 
 /* Container for page content */
@@ -63,7 +70,7 @@ header img {
     background: rgba(244, 244, 244, 1);
     border-right: 1px solid #e5e5e5;
     position: fixed;
-    top: 3vw; 
+    /* top: 3vw;  */
     bottom: 0;
     height: 100%;
     width: 60px;
@@ -95,7 +102,7 @@ header img {
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding-top: 25px;
+    padding-top: 5vw;
 }
 
 .sidebar-menu ul {
@@ -147,12 +154,12 @@ header img {
 /* Sticky Log Out Section */
 .sidebar-logout {
     position: absolute;
-    bottom: 15vh;
+    bottom: 5vh;
     width: 100%;
     display: flex;
     justify-content: flex-start;  
     align-items: center;
-    padding: 10px;
+    padding: 3px;
 }
 
 .sidebar-logout a {
@@ -550,4 +557,3 @@ header img {
         min-width: 160px;
     }
 }
-
